# coduino

./: .gitignore  LICENSE  README.org  coduino.cabal  sources.txt
src/: atom.hs  copilot.c  copilot.h  copilot.hs
