name:                   coduino
version:                0.1
synopsis:               Haskell play/sandbox project for embedded systems
homepage:               http://github.com/dysinger/coduino
license:                Apache-2.0
license-file:           LICENSE
maintainer:             Tim Dysinger <tim@dysinger.net>
author:                 Tim Dysinger <tim@dysinger.net>
category:               Embedded
build-type:             Simple
cabal-version:          >=1.16

executable              atom
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
  main-is:              atom.hs
  build-depends:        base   >= 4.6
                      , atom   >= 1.0.11

executable              copilot
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
  main-is:              copilot.hs
  build-depends:        base              >=4.6
                      , copilot           >=2.1.0
                      , copilot-core      >=0.2.4
                      , copilot-language  >=0.9.1
                      , copilot-libraries >=0.6
                      , copilot-cbmc      >=0.23
                      , copilot-c99       >=0.2.5
                      , copilot-sbv       >=0.6
